// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tp.greeting";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package generalInfoPackage;

import "google/protobuf/empty.proto";

message Empty{}

message RegistryInfo {
  string ipAddress = 1;
  string name = 2;
}

message FileInfo {
  string fileName = 1;
  uint32 size = 2 ;
  string SlaveId = 3;
}

message FileName {
  string fileName = 1;
}

message FileInfoList {
  repeated FileInfo fileInfoList = 1;
}

service GeneralService {
  // from slave to master
  rpc RegisterToMaster (RegistryInfo) returns (Empty) {}
  //from master to slave
  rpc GetFileInfo(Empty) returns (FileInfoList) {}
  rpc SearchFile (FileName) returns (FileInfo) {}
}